src/objects/AeroPort__c/AeroPort__c.object-meta.xml
<CustomObject>
    <description>Object to help OE Sales Teams and M&amp;PM Finance (AeroPort) stay in Lock-Step and manage their responsible areas.</description>
    <label>Opportunity AeroPort</label>
    <nameField>
        <displayFormat>OAP-{0000}</displayFormat>
        <label>Opp AeroPort ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity AeroPort</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>