src/objects/AeroPort__c/fields/AeroPort_MPM_COE__c.field-meta.xml
<CustomField>
    <fullName>AeroPort_MPM_COE__c</fullName>
    <label>AeroPort MPM COE</label>
    <length>120</length>
    <type>Text</type>
</CustomField>