src/objects/AeroPort__c/fields/Variance_Capital__c.field-meta.xml
<CustomField>
    <fullName>Variance_Capital__c</fullName>
    <formula>AeroPort_Total_Capital__c  -  Total_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capital input does not equal AeroPort Capital</inlineHelpText>
    <label>Variance Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>