src/objects/AeroPort__c/fields/Variance_Found__c.field-meta.xml
<CustomField>
    <fullName>Variance_Found__c</fullName>
    <description>Significant +2% Variance found in at least one variance</description>
    <inlineHelpText>Significant +2% Variance found in at least one variance or Start Years do not equal one another</inlineHelpText>
    <label>Variance Found</label>
    <length>15</length>
    <type>Text</type>
</CustomField>