src/objects/AeroPort__c/fields/Variance_RDE__c.field-meta.xml
<CustomField>
    <fullName>Variance_RDE__c</fullName>
    <formula>AeroPort_Total_RDE__c  -  Total_RDE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>RDE input does not equal AeroPort RDE</inlineHelpText>
    <label>Variance RDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>