src/objects/AeroPort__c/recordTypes/ATR_OE.recordType-meta.xml
<RecordType>
    <fullName>ATR_OE</fullName>
    <active>true</active>
    <description>Default for All Users and input currently</description>
    <label>ATR OE</label>
</RecordType>