src/objects/AeroPort__c/listViews/Boeing.listView-meta.xml
<ListView>
    <fullName>Boeing</fullName>
    <columns>NAME</columns>
    <columns>AeroPort_Key__c</columns>
    <columns>Opportunity__c</columns>
    <columns>AeroPort_Program__c</columns>
    <columns>Start_Year__c</columns>
    <columns>EIS_Year__c</columns>
    <columns>Variance_Found2__c</columns>
    <columns>Variance_Found__c</columns>
    <columns>Variance_Start_Year__c</columns>
    <columns>Total_Net_RDE__c</columns>
    <columns>Total_Net_Margin__c</columns>
    <columns>Total_Capital__c</columns>
    <filterScope>Everything</filterScope>
    <label>Boeing</label>
    <sharedTo>
        <roleAndSubordinatesInternal>ATR</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>